--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ mccabe==0.6.1
 oauthlib==3.1.0
 packaging==20.4
 pathspec==0.8.0
+psycopg2-binary==2.8.5
 pycodestyle==2.6.0
 pyflakes==2.2.0
 PyJWT==1.7.1
