--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-filter==2.3.0
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
 flake8==3.8.3
+gunicorn==20.0.4
 idna==2.10
 importlib-metadata==1.7.0
 mccabe==0.6.1
